@@ -1,77 +1,122 @@
 package me.exeos.jvmtpx;
 
-import java.io.*;
+import me.exeos.jvmtpx.extractor.Version;
+import me.exeos.jvmtpx.extractor.dispatchor.DispatcherInput;
+import me.exeos.jvmtpx.extractor.dispatchor.ExtractorDispatcher;
+
+import java.io.File;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.HashMap;
+import java.nio.file.Paths;
 import java.util.Map;
-import java.util.zip.Inflater;
-import java.util.zip.InflaterInputStream;
+import java.util.Optional;
 
 public class Main {
 
-    private static final int MAGIC = 1246909233;
-
     static void main(String[] args) {
-        if (args.length != 1) {
-            System.out.println("You need to provide the path to the compressed binary");
-            return;
-        }
+        parseArgs(args).ifPresent(input -> {
+            Map<String, byte[]> extracted = ExtractorDispatcher.extract(input);
 
-        Path inputPath = Path.of(args[0]).toAbsolutePath();
-        Path inputDir = inputPath.getParent();
-        try {
-            byte[] inFile = Files.readAllBytes(inputPath);
-            Map<String, long[]> platformOffsets = new HashMap<>();
-            byte[] blob = loadCompressed(inFile, platformOffsets);
+            for (Map.Entry<String, byte[]> entry : extracted.entrySet()) {
+                Path outputPath = Paths.get(
+                        System.getProperty("user.dir"),
+                        entry.getKey().replace("/", ".")
+                );
 
-            for (Map.Entry<String, long[]> entry : platformOffsets.entrySet()) {
-                String name = entry.getKey();
-                long[] loc = entry.getValue();
-
-                int offset = (int)loc[0];
-                int compressedLen = (int)loc[1];
-                ByteArrayInputStream slice = new ByteArrayInputStream(blob, offset, compressedLen);
-                var iis = new InflaterInputStream(slice, new Inflater(true));
-
-                Path outPath = inputDir.resolve(name.replace("/", "."));
-                System.out.println(outPath.toString());
-                if (outPath.getParent() != null) {
-                    Files.createDirectories(outPath.getParent());
-                }
-
-                try (OutputStream out = Files.newOutputStream(outPath)) {
-                    iis.transferTo(out);
+                try {
+                    Files.write(outputPath, entry.getValue());
+                } catch (IOException e) {
+                    System.out.println("Failed to write to file: " + outputPath);
                 }
             }
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+        });
     }
 
-    private static byte[] loadCompressed(byte[] blob, Map<String, long[]> platformOffsets) throws IOException {
-        ByteArrayInputStream bin = new ByteArrayInputStream(blob);
-        DataInputStream din = new DataInputStream(bin);
-        if (din.readInt() != MAGIC) {
-            throw new IOException("bad resource blob magic");
-        }
-        int count = din.readInt();
-        String[] names = new String[count];
-        int[] compressed = new int[count];
-        for (int i = 0; i < count; ++i) {
-            names[i] = din.readUTF();
-            din.readInt();
-            compressed[i] = din.readInt();
-        }
-        int dataStart = blob.length - bin.available();
-        Map<String, long[]> entries = new HashMap<String, long[]>(count * 2);
-        int offset = dataStart;
-        for (int i = 0; i < count; ++i) {
-            entries.put(names[i], new long[]{offset, compressed[i]});
-            offset += compressed[i];
+    private static Optional<DispatcherInput> parseArgs(String[] args) {
+        if (args.length < 2 || args.length > 3) {
+            printUsage();
+            return Optional.empty();
         }
 
-        platformOffsets.putAll(entries);
-        return blob;
+        File input = new File(args[0]);
+        if (!input.exists()) {
+            System.out.println("Provided input does not exist");
+            printUsage();
+            return Optional.empty();
+        }
+        if (!input.canRead()) {
+            System.out.println("Can't read from provided input");
+            return Optional.empty();
+        }
+
+        byte[] inputBytes;
+        try {
+            inputBytes = Files.readAllBytes(input.toPath());
+        } catch (IOException e) {
+            System.out.println("Failed to read input bytes");
+            return Optional.empty();
+        }
+
+        String argVersion = args[1];
+        Version version = null;
+        for (Version potentialVersion : Version.values()) {
+            if (potentialVersion.stringVersion.equals(argVersion.trim().toLowerCase().replace("v", ""))) {
+                version = potentialVersion;
+                break;
+            }
+
+            try {
+                if (potentialVersion.intVersion == Integer.parseInt(argVersion)) {
+                    version = potentialVersion;
+                }
+            } catch (NumberFormatException _) {
+            }
+        }
+
+        if (version == null) {
+            System.out.println("Failed to parse version");
+            printUsage();
+            return Optional.empty();
+        }
+
+        byte[] pepper = null;
+        if (args.length == 3) {
+            pepper = parsePepper(args[2]);
+        }
+
+        if (version.requiresPepper && pepper == null) {
+            System.out.println("Version requires pepper, but it wasn't provided");
+        }
+
+        return Optional.of(new DispatcherInput(version, inputBytes, pepper));
+    }
+
+    private static byte[] parsePepper(String pepperArg) {
+        if (pepperArg.isBlank()) {
+            return null;
+        }
+
+        String[] parts = pepperArg.split(",");
+        byte[] pepper = new byte[parts.length];
+        for (int i = 0; i < parts.length; i++) {
+            try {
+                pepper[i] = Byte.parseByte(parts[i].trim());
+            } catch (NumberFormatException e) {
+                throw new IllegalArgumentException(
+                        "Invalid pepper byte at index " + i + ": '" + parts[i] + "'", e);
+            }
+        }
+        return pepper;
+    }
+
+    private static void printUsage() {
+        System.out.println("Usage: java -jar jvmtpx.jar <path/to/jvmtp/binary> <version> [pepper]");
+        System.out.println("  pepper: optional, required for some versions. Comma-separated byte[], e.g. \"10,-7,1,0\"");
+        System.out.println();
+        System.out.println("Supported Versions:");
+        for (Version version : Version.values()) {
+            System.out.println("Version: " + version.stringVersion + " (" + version.intVersion + ")" + (version.requiresPepper ? ", requires pepper" : ""));
+        }
     }
 }
